# baxter_pickup

./: CMakeLists.txt  README.md  baxter_env_setup.sh  baxter_network_setup.sh  change_cameras.txt  package.xml
launch/: baxter_moveit_setup.launch  baxter_rviz.launch  camera_view.rviz
meshes/: table.STL  table_interference.STL  tube.stl
src/: calibration.m  viz_servo.cpp
