<package>
  <name>baxter_pickup</name>
  <version>0.0.1</version>
  <description>The baxter test tube manipulation package</description>

  <maintainer email="peter.jeffris@colorado.edu">Peter</maintainer>
  <maintainer email="clark.matthew8@gmail.com">Matt</maintainer>
  
  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>block_grasp_generator</build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>baxter_control</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>baxter_gripper_server</build_depend>

  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros</run_depend>
  <run_depend>moveit_ros_visualization</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_planners</run_depend>
  <run_depend>moveit_planners_ompl</run_depend>
  <run_depend>moveit_plugins</run_depend>
  <run_depend>moveit_simple_controller_manager</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>

  <export>
  </export>
</package>